# DeepVein

./: .gitignore  CMakeLists.txt  README.md
i18n/: lang_en_US.ts  lang_zh_CN.ts
resources/: app.qrc  app.qss
src/: main.cpp
src/convert/: doccutter.cpp  doccutter.h  ocrengine.cpp  ocrengine.h  reranker_engine.cpp  reranker_engine.h  semanticextract.cpp  semanticextract.h
src/core/: excepthandler.cpp  excepthandler.h  global_defs.h
src/file_io/: IFilerouter.h  file_factory.cpp  file_factory.h  filescanner.cpp  filescanner.h  filesearch.cpp  filesearch.h
src/file_io/handlers/: handler_doc.cpp  handler_doc.h  handler_img.cpp  handler_img.h  handler_other.cpp  handler_other.h  handler_pdf.cpp  handler_pdf.h
src/file_io/tasks/: build_index_task.cpp  build_index_task.h
src/llm/: aiclient.cpp  aiclient.h  prompt_templates.h
src/llm/llm_tools/: llmtools.cpp  llmtools.h
src/memorypool/: memorypool.h
src/storage/: datamanager.cpp  datamanager.h  vector_db.cpp  vector_db.h
src/task/: ITaskrouter.h  task_factory.cpp  task_factory.h
src/task/actions/: action_chat.cpp  action_chat.h  action_exact.cpp  action_exact.h  action_file_analysis.cpp  action_file_analysis.h  action_hybrid_compare.cpp  action_hybrid_compare.h  action_list_search.cpp  action_list_search.h  action_semantic.cpp  action_semantic.h
src/task/atoms/: atom_exact_search.cpp  atom_exact_search.h  atom_extract_entities.cpp  atom_extract_entities.h  atom_fetch_parent.cpp  atom_fetch_parent.h  atom_hybrid_recall.cpp  atom_hybrid_recall.h  atom_rerank_filter.cpp  atom_rerank_filter.h
src/task/workflow/: workflow_engine.cpp  workflow_engine.h
src/threadpool/: threadpool.cpp  threadpool.h
src/ui/: chatbubblewidget.cpp  chatbubblewidget.h  chathistoryitem.cpp  chathistoryitem.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwidget_settings.cpp  mainwidget_sidebar.cpp
